2013-11-26  Filip Pizlo  <fpizlo@apple.com>

        Do bytecode validation as part of testing
        https://bugs.webkit.org/show_bug.cgi?id=124913

        Reviewed by Oliver Hunt.

        * Scripts/run-jsc-stress-tests:

2013-11-27  Andres Gomez  <agomez@igalia.com>

        [GTK] Tools/Scripts/update-webkitgtk-libs fails due to missing fontutils dependencies for building the "xserver" module
        https://bugs.webkit.org/show_bug.cgi?id=124940

        Reviewed by Martin Robinson.

        xserver-font-utils is needed for building gtk port dependencies
        with jhbuild.

        * gtk/install-dependencies: Added xserver-font-utils to jhbuild
        dependecies.

2013-11-27  Andres Gomez  <agomez@igalia.com>

        [GTK] Tools/Scripts/update-webkitgtk-libs unsorted and fails because of missing "git"
        https://bugs.webkit.org/show_bug.cgi?id=124938

        Reviewed by Philippe Normand.

        Added needed git dependency for building the gtk port with
        jhbuild. Also, the dependencies needed for building the gtk port
        are now sorted alphabetically.

        * gtk/install-dependencies: Added git as jhbuild dependency and
        sorted dependencies alphabetically.

2013-11-27  Jozsef Berta  <jberta@inf.u-szeged.hu>

        run_webkit_tests.py: error: no such option: --wincairo
        https://bugs.webkit.org/show_bug.cgi?id=124927

        Reviewed by Ryosuke Niwa.

        * BuildSlaveSupport/build.webkit.org-config/config.json: The run_webkit_tests.py doesn't supports
        the layout testing on wincairo, so it is turned off.

2013-11-26  Marcelo Lira  <marcelo.lira@openbossa.org>

        Nix upstreaming - Adding build files and supporting scripts
        https://bugs.webkit.org/show_bug.cgi?id=118367

        Reviewed by Ryosuke Niwa.

        * Scripts/build-webkit:
        * Scripts/run-nix-tests: Added.
        * Scripts/run-webkit-tests:
        * Scripts/update-webkit-libs-jhbuild: